--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -513,6 +513,7 @@ services:
 
   zkevm-prover:
     container_name: zkevm-prover
+    platform: linux/amd64
     image: hermeznetwork/zkevm-prover:v5.0.6
     ports:
       - 50061:50061 # MT
