--- a/test/config/debug.node.config.toml
+++ b/test/config/debug.node.config.toml
@@ -45,10 +45,10 @@ GlobalQueue = 1024
 		ByteGasCost = 16
 		ZeroByteGasCost = 4
 		NetProfit = 1
-	    BreakEvenFactor = 1.1			
+	    BreakEvenFactor = 1.1
 		FinalDeviationPct = 10
 		EthTransferGasPrice = 0
-		EthTransferL1GasPriceFactor = 0			
+		EthTransferL1GasPriceFactor = 0
 		L2GasPriceSuggesterFactor = 0.5
 	[Pool.DB]
 	User = "pool_user"
@@ -90,6 +90,7 @@ TxLifetimeCheckInterval = "10m"
 TxLifetimeMax = "3h"
 LoadPoolTxsCheckInterval = "500ms"
 StateConsistencyCheckInterval = "5s"
+L2Coinbase = "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266"
 	[Sequencer.Finalizer]
 		NewTxsWaitInterval = "100ms"
 		ForcedBatchesTimeout = "5s"
@@ -98,14 +99,14 @@ StateConsistencyCheckInterval = "5s"
 		L1InfoTreeL1BlockConfirmations = 0
 		L1InfoTreeCheckInterval = "10s"
 		BatchMaxDeltaTimestamp = "60s"
-		L2BlockMaxDeltaTimestamp = "3s"		
+		L2BlockMaxDeltaTimestamp = "3s"
 		ResourceExhaustedMarginPct = 10
 		HaltOnBatchNumber = 0
 		SequentialBatchSanityCheck = false
 		SequentialProcessL2Block = true
 	[Sequencer.Finalizer.Metrics]
 		Interval = "60m"
-		EnableLog = true		
+		EnableLog = true
 	[Sequencer.StreamServer]
 		Port = 6900
 		Filename = "/datastreamer/datastream.bin"
