--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -12,7 +12,7 @@ Outputs = ["stderr"]
 	Name = "state_db"
 	Host = "zkevm-state-db"
 	Port = "5432"
-	EnableLog = false	
+	EnableLog = false
 	MaxConns = 200
 	[State.Batch]
 		[State.Batch.Constraints]
@@ -45,10 +45,10 @@ GlobalQueue = 1024
 		ByteGasCost = 16
 		ZeroByteGasCost = 4
 		NetProfit = 1
-	    BreakEvenFactor = 1.1			
+	    BreakEvenFactor = 1.1
 		FinalDeviationPct = 10
 		EthTransferGasPrice = 0
-		EthTransferL1GasPriceFactor = 0			
+		EthTransferL1GasPriceFactor = 0
 		L2GasPriceSuggesterFactor = 0.5
 	[Pool.DB]
 	User = "pool_user"
@@ -104,6 +104,7 @@ TxLifetimeCheckInterval = "10m"
 TxLifetimeMax = "3h"
 LoadPoolTxsCheckInterval = "500ms"
 StateConsistencyCheckInterval = "5s"
+L2Coinbase = "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266"
 	[Sequencer.Finalizer]
 		NewTxsWaitInterval = "100ms"
 		ForcedBatchesTimeout = "5s"
@@ -119,14 +120,14 @@ StateConsistencyCheckInterval = "5s"
 		SequentialProcessL2Block = true
 	[Sequencer.Finalizer.Metrics]
 		Interval = "60m"
-		EnableLog = true		
+		EnableLog = true
 	[Sequencer.StreamServer]
 		Port = 6900
 		Filename = "/datastreamer/datastream.bin"
 		Version = 1
 		ChainID = 1337
 		Enabled = true
-		
+
 
 [SequenceSender]
 WaitPeriodSendSequence = "15s"
