Integrate the `zkevm-node` v0.7.0 changes (#146)
* Update DS Format (#3608)

* protobuf datastream

* proto batch end (#3612)

* fix genesis DS (#3615)

* Fix DSSendL2Block batch number (#3617)

* Fix DSSendL2Block batch number

* latest proto (#3620)

* Fix DSSendBatchEnd (#3621)

* add TxFeeCap config (#3611)

* Add delay when getting storedFlushId from the executor/hashdb (#3625)

* Add sleep delay when getting storedFlushId from the executor/hashdb

* update config doc

* Fix use of L2coinbase configured in sequencesender.L2Coinbase parameter (#3642)

* fix use l2coinbase configured in sequencesender.L2Coinbase parameter

* update doc

* Feature/3640 synchronizer choose to sync from l2 (#3641)

* #3640. New Param Synchronizer.L2Synchronization.Enable to choose if sync from L2

* change synchronization config params 'Enable' to 'Enabled' (#3656)

* change 'Enable' to 'Enabled' on sync config and changed comments

* Cherry-pick #3650: Do fatal when datastream channel is full (workaround to fix datastream blocking issue) (#3654)

* Do fatal when datastream channel is full (workaround to fix datastream blocking issue) (#3650)

* Do fatal when datastream channel is full (this will restart sequencer automatically)

* update datastream library (more ds-debug logs)

* fix decrease DataToStreamChannelCount

* add optimistic gas computation while estimating gas (#3653)

* Use Eth block hash for l2 blocks in data stream (#3661)

* Use Eth block hash for l2 blocks in data stream

* handle minTimestamp

* empty imStateRoot (#3663)

* empty imStateRoot

* fix comment

* Cherry-pick #3659,#3662: Remove sync with virtual state (synchronizer). Add L1 block confirmations (#3666)

* Remove sync with virtual state (synchronizer). Add L1 block confirmat… (#3659)

* Remove sync with virtual state (synchronizer). Add L1 block confirmations to consider sequence final

* fix get monitored tx receipt

* update doc

*

--- a/config/environments/local/local.node.config.toml
+++ b/config/environments/local/local.node.config.toml
@@ -102,6 +102,7 @@ StateConsistencyCheckInterval = "5s"
 		L2BlockMaxDeltaTimestamp = "3s"
 		ResourceExhaustedMarginPct = 10
 		StateRootSyncInterval = "360s"
+		FlushIdCheckInterval = "50ms"
 		HaltOnBatchNumber = 0
 		SequentialBatchSanityCheck = false
 		SequentialProcessL2Block = false
@@ -111,6 +112,7 @@ StateConsistencyCheckInterval = "5s"
 	[Sequencer.StreamServer]
 		Port = 0
 		Filename = ""
+		WriteTimeout = "5s"
 		Enabled = false
 
 [SequenceSender]
@@ -118,6 +120,7 @@ WaitPeriodSendSequence = "5s"
 LastBatchVirtualizationTimeMaxWaitPeriod = "5s"
 L1BlockTimestampMargin = "30s"
 MaxTxSizeForL1 = 131072
+SequenceL1BlockConfirmations = 32
 L2Coinbase = "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266"
 PrivateKey = {Path = "/pk/sequencer.keystore", Password = "testonly"}
 
