--- a/tools/datastreamer/config/tool.config.toml
+++ b/tools/datastreamer/config/tool.config.toml
@@ -1,12 +1,13 @@
 [Online]
-URI = "zkevm-sequencer:6900"
+URI = "localhost:6900"
 StreamType = 1
 
 [Offline]
 Port = 6901
 Filename = "datastream.bin"
-Version = 1
+Version = 3
 ChainID = 1440
+WriteTimeout = "5s"
 UpgradeEtrogBatchNumber = 0
 
 [StateDB]
@@ -18,12 +19,8 @@ Port = "5432"
 EnableLog = false
 MaxConns = 200
 
-[Executor]
-URI = "zkevm-prover:50071"
-MaxGRPCMessageSize = 100000000
-
 [MerkleTree]
-URI = "zkevm-prover:50061"
+URI = "localhost:50061"
 MaxThreads = 20
 CacheFile = "merkle_tree_cache.json"
 
