adaptive the old forkID

--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -74,11 +74,17 @@ WriteTimeout = "60s"
 MaxRequestsPerIPAndSecond = 5000
 SequencerNodeURI = ""
 EnableL2SuggestedGasPricePolling = true
-VerifierAddr = "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
-TrustedAggregator  = "0xde56911b68fd77C305c23217fda4d5A66985E7ea"
 	[RPC.WebSockets]
 		Enabled = true
 		Port = 8133
+#	[[RPC.VerifyZkProofConfigs]]
+#		ForkID = 5
+#		VerifierAddr = "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
+#		TrustedAggregator = "0xe76cc099094d484e67cd7b777d22a93afc2920cc"
+#	[[RPC.VerifyZkProofConfigs]]
+#		ForkID = 8
+#		VerifierAddr = "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
+#		TrustedAggregator = "0xe76cc099094d484e67cd7b777d22a93afc2920cc"
 
 [Synchronizer]
 SyncInterval = "1s"
